--- a/app/styles/layout.module.css
+++ b/app/styles/layout.module.css
@@ -28,7 +28,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  height: calc(100vh - 120px);
+  min-height: calc(100vh - 120px);
+  width: 100%;
+  padding: 10px 10px 10px 10px;
+  background-color: gray;
+  overflow: scroll;
 }
 
 .footer {
