--- a/app/styles/layout.module.css
+++ b/app/styles/layout.module.css
@@ -1,6 +1,6 @@
 .container {
-  min-height: 100vh;
-  max-height: 100vh;
+  min-height: 100dvh;
+  max-height: 100dvh;
 }
 
 .header {
@@ -13,8 +13,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: calc(100vh - 120px);
-  min-height: calc(100vh - 120px);
+  height: calc(100dvh - 120px);
+  min-height: calc(100dvh - 120px);
   width: 100%;
   padding: 10px 10px 20px 10px;
   overflow: scroll;
@@ -23,6 +23,6 @@
 
 .footer {
   position: fixed;
-  top: calc(100vh - 70px);
+  top: calc(100dvh - 70px);
   width: 100%;
 }
