--- a/app/styles/layout.module.css
+++ b/app/styles/layout.module.css
@@ -10,15 +10,15 @@
 }
 
 .main {
+  position: fixed;
+  top: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: calc(100dvh - 120px);
-  min-height: calc(100dvh - 120px);
+  height: calc(100dvh - 5px);
+  min-height: calc(100dvh - 5px);
+  max-height: calc(100dvh - 50px);
   width: 100%;
-  padding: 10px 10px 20px 10px;
-  overflow: scroll;
-  transform: translateY(50px);
 }
 
 .footer {
