--- a/app/styles/layout.module.css
+++ b/app/styles/layout.module.css
@@ -15,10 +15,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: calc(100dvh - 5px);
-  min-height: calc(100dvh - 5px);
+  height: calc(100dvh - 50px);
+  min-height: calc(100dvh - 50px);
   max-height: calc(100dvh - 50px);
   width: 100%;
+  background: #6d6e71;
 }
 
 .footer {
