--- a/app/styles/layout.module.css
+++ b/app/styles/layout.module.css
@@ -1,29 +1,31 @@
 .container {
-  min-height: 100dvh;
-  max-height: 100dvh;
+  min-height: 100vh;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
 }
 
 .header {
+  position: absolute;
+  top: 0;
   width: 100%;
   z-index: 10;
 }
 
 .main {
+  position: absolute;
   top: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: calc(100dvh - 120px);
-  min-height: calc(100dvh - 120px);
-  max-height: calc(100dvh - 120px);
+  height: calc(100vh - 120px);
   width: 100%;
   background: #6d6e71;
-  transform: translateY(-100px);
 }
 
 .footer {
+  position: absolute;
+  top: calc(100vh - 70px);
+  height: 70px;
   width: 100%;
-  transform: translateY(-100px);
 }
