--- a/app/styles/layout.module.css
+++ b/app/styles/layout.module.css
@@ -9,16 +9,18 @@
 .header {
   position: absolute;
   top: 0;
+  height: 50px;
   width: 100%;
+  z-index: 10;
 }
 
 .main {
   position: absolute;
-  top: 50px;
+  top: 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: calc(100dvh - 50px);
+  height: 100dvh;
   width: 100%;
 }
 
