--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -4,7 +4,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: system-ui, sans-serif;
-  background: #6d6e71;
+  background-color: #131314;
 }
 
 * {
