--- a/app/styles/layout.module.css
+++ b/app/styles/layout.module.css
@@ -15,8 +15,7 @@
 }
 
 .main {
-  position: absolute;
-  top: 0px;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
